adding some modules

--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
   "dependencies": {
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "socket.io-client": "^4.4.1",
+    "two.js": "^0.8.3",
+    "xebra-communicator": "^1.2.5",
+    "xebra.js": "^1.2.5"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
