--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "socket.io-client": "^4.4.1",
+    "swr": "^1.3.0",
     "two.js": "^0.8.3",
     "xebra-communicator": "^1.2.5",
     "xebra.js": "^1.2.5"
